--- a/pebble-slider.html
+++ b/pebble-slider.html
@@ -31,6 +31,7 @@
 .ps-vertical-type .ps-range-bar,
 .ps-horizontal-type .ps-range-bar {
     background-color: #99d1ff;
+    opacity: 0;
 }
 .ps-vertical-type .ps-toggle-neck,
 .ps-horizontal-type .ps-toggle-neck {
